# Attack-Capital-Test

./: README.md  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  vercel.json
apps/api/: api.py  development.env  index.py  requirements.txt  vercel.json
apps/web/: middleware.ts  next.config.js  package.json
apps/web/lib/: db.ts
apps/web/src/agents/: agent.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(auth)/login/: page.tsx
apps/web/src/app/api/agent/: route.ts
apps/web/src/app/rooms/: page.tsx
apps/web/src/components/: CTASection.tsx  CaseSetudySection.tsx  FeatureSection.tsx  FeatureSectionTwo.tsx  Footer.tsx  HeroSection.tsx  Navbar.tsx  ProjectSection.tsx  SessionWrapper.tsx  SocialSection.tsx
apps/web/src/components/ui/: command.tsx  form.tsx  sidebar.tsx
apps/web/src/hooks/: useLiveKitAgent.ts
apps/web/src/schema/: conversation.ts
apps/web/src/services/: livekitAgent.ts
apps/web/src/types/: chatMessage.ts
